some more details in information

--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
-"POT-Creation-Date: 2020-07-10 22:10+0200\n"
-"PO-Revision-Date: 2020-07-10 22:13+0200\n"
+"POT-Creation-Date: 2020-07-14 21:30+0200\n"
+"PO-Revision-Date: 2020-07-14 21:32+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: de_DE\n"
@@ -109,7 +109,7 @@ msgid "When you are ready to begin press [b]{}[/b]."
 msgstr "Wenn Sie bereit sind zu beginnen, drücken Sie [b]{}[/b]."
 
 #: src/widgets/screeninstructions.kv:61 src/widgets/screeninstructions.kv:77
-#: src/widgets/screeninstructions.py:142
+#: src/widgets/screeninstructions.py:144
 msgid "Start"
 msgstr "Anfangen"
 
@@ -179,9 +179,12 @@ msgid ""
 "on. These data are considered part of the research data.\n"
 "\n"
 "### Personal Data\n"
-"The {appname} app does **not** collect sensitive or personally identifiable "
-"information such as a user's name, address, telephone number, IP-address, "
-"passwords, payment details, or social security number.  \n"
+"The {appname} app collects voluntary information about the age group and "
+"gender of the participants. The {appname} app does **not** collect sensitive "
+"or personally identifiable information such as a user's name, address, "
+"telephone number, IP-address, passwords, payment details, or social security "
+"number. Therefore, the information cannot be used to identify a natural "
+"person and is thus not considered personal data (Recital 26 GDPR).  \n"
 "However, if a user decides to contact us via e-mail, which is completely "
 "optional, we and the third-parties providing the e-mail services will "
 "process the e-mail address and its content to provide the service. After "
@@ -222,11 +225,13 @@ msgid ""
 "The results and collected research data from any study in the {appname} app "
 "will be published as a scientific publication. This is done in anonymized "
 "form, i.e. without the research data on its own being able to identify a "
-"specific person. The fully anonymized data from these studies are made "
-"available on the Internet as open data under the [CC-BY-SA license](https://"
-"creativecommons.org/licenses/by-sa/3.0/). This means that the research data "
-"can also be used for any purposes other than the studies they were "
-"originally collected for, including commercial purposes.\n"
+"specific person. The voluntary information about age group and gender of "
+"participants are used to assess the representativeness of the research data. "
+"The fully anonymized data from these studies are made available on the "
+"Internet as open data under the [CC-BY-SA license](https://creativecommons."
+"org/licenses/by-sa/3.0/). This means that the research data can also be used "
+"for any purposes other than the studies they were originally collected for, "
+"including commercial purposes.\n"
 "\n"
 "The collected research data will be processed to perform statistical "
 "analysis for scientific inquiries in a semi-automatic fashion. A link to the "
@@ -280,9 +285,13 @@ msgstr ""
 "werden als Teil der Forschungsdaten betrachtet.\n"
 "\n"
 "### Persönliche Daten\n"
-"Die {appname} App sammelt **keine** sensiblen oder persönlich "
-"identifizierende Informationen wie Name, Adresse, Telefonnummer, IP-Adresse, "
-"Passwörter, Zahlungsdetails oder Sozialversicherungsnummer der Nutzenden.  \n"
+"Die {appname} App sammelt freiwillige Angaben über die Altersgruppe und das "
+"Geschlecht der Teilnehmenden. Die {appname} App sammelt **keine** sensiblen "
+"oder persönlich identifizierende Informationen wie Name, Adresse, "
+"Telefonnummer, IP-Adresse, Passwörter, Zahlungsdetails oder "
+"Sozialversicherungsnummer der Nutzenden. Daher können die Informationen "
+"nicht zur Identifizierung einer natürlichen Person verwendet werden und "
+"gelten daher nicht als personenbezogene Daten (Erwägungsgrund 26 DSGVO). \n"
 "Wenn sich ein*e Benutzer*in jedoch dazu entscheidet, uns per E-Mail zu "
 "kontaktieren, was völlig optional ist, verarbeiten wir und die "
 "Drittanbieter, die die E-Mail-Dienste bereitstellen, die E-Mail-Adresse und "
@@ -327,12 +336,14 @@ msgstr ""
 "Die Ergebnisse und gesammelten Forschungsdaten aus jeder Studie in der "
 "{appname} App werden als wissenschaftliche Arbeit veröffentlicht. Dies "
 "erfolgt in anonymisierter Form, d. h. ohne dass die Forschungsdaten selbst "
-"eine bestimmte Person identifizieren können. Die vollständig anonymisierten "
-"Daten aus diesen Studien werden im Internet als offene Daten unter der [CC-"
-"BY-SA-Lizenz](https://creativecommons.org/licenses/by-sa/3.0/de/) zur "
-"Verfügung gestellt. Dies bedeutet, dass die Forschungsdaten auch für andere "
-"Zwecke als die Studien verwendet werden können, für die sie ursprünglich "
-"gesammelt wurden, einschließlich kommerzieller Zwecke.\n"
+"eine bestimmte Person identifizieren können. Die freiwilligen Informationen "
+"über Altersgruppe und Geschlecht der Teilnehmenden werden verwendet, um die "
+"Repräsentativität der Forschungsdaten zu bewerten. Die vollständig "
+"anonymisierten Daten aus diesen Studien werden im Internet als offene Daten "
+"unter der [CC-BY-SA-Lizenz](https://creativecommons.org/licenses/by-sa/3.0/"
+"de/) zur Verfügung gestellt. Dies bedeutet, dass die Forschungsdaten auch "
+"für andere Zwecke als die Studien verwendet werden können, für die sie "
+"ursprünglich gesammelt wurden, einschließlich kommerzieller Zwecke.\n"
 "\n"
 "Die gesammelten Forschungsdaten werden verarbeitet, um halbautomatisch "
 "ausgeführte statistische Analysen für wissenschaftliche Untersuchungen "
@@ -883,6 +894,8 @@ msgstr ""
 #: src/widgets/screenconsents.py:90
 #, python-brace-format
 msgid ""
+"If you have any questions regarding this study, please direct them to the "
+"contacts listed below.\n"
 "[b]Contact regarding this study:[/b]\n"
 "Philipps-Universität Marburg\n"
 "Department of Psychology\n"
@@ -898,6 +911,8 @@ msgid ""
 "marburg.de[/color][/ref]\n"
 "[ref=mailto:{1}][color=0000ff]{1}[/color][/ref]"
 msgstr ""
+"Sollten Sie Fragen bezüglich dieser Studie haben, richten Sie diese bitte "
+"and die unten aufgeführten Kontakte.\n"
 "[b]Kontakt für diese Studie:[/b]\n"
 "Philipps-Universität Marburg\n"
 "Fachbereich Psychologie\n"
@@ -913,7 +928,7 @@ msgstr ""
 "marburg.de[/color][/ref]\n"
 "[ref=mailto:{1}][color=0000ff]{1}[/color][/ref]"
 
-#: src/widgets/screenconsents.py:104
+#: src/widgets/screenconsents.py:105
 msgid ""
 "I hereby confirm that I have read and understood the participation "
 "information described above as well as the [ref=privacy]"
@@ -1090,7 +1105,7 @@ msgstr ""
 "Sie, dass die Schieberegler auch weiterhin die Größe der [b]weißen Scheibe[/"
 "b] beeinflussen. Erfüllen Sie alle Aufgaben gleichzeitig!"
 
-#: src/widgets/screeninstructions.py:140
+#: src/widgets/screeninstructions.py:142
 msgid "Start Practice"
 msgstr "Übung anfangen"
 
