--- a/locales/en/LC_MESSAGES/translations.po
+++ b/locales/en/LC_MESSAGES/translations.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
-"POT-Creation-Date: 2020-07-10 22:00+0200\n"
-"PO-Revision-Date: 2020-07-10 22:00+0200\n"
+"POT-Creation-Date: 2020-07-14 21:30+0200\n"
+"PO-Revision-Date: 2020-07-14 21:30+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: en\n"
@@ -107,7 +107,7 @@ msgid "When you are ready to begin press [b]{}[/b]."
 msgstr ""
 
 #: src/widgets/screeninstructions.kv:61 src/widgets/screeninstructions.kv:77
-#: src/widgets/screeninstructions.py:142
+#: src/widgets/screeninstructions.py:144
 msgid "Start"
 msgstr ""
 
@@ -177,9 +177,12 @@ msgid ""
 "on. These data are considered part of the research data.\n"
 "\n"
 "### Personal Data\n"
-"The {appname} app does **not** collect sensitive or personally identifiable "
-"information such as a user's name, address, telephone number, IP-address, "
-"passwords, payment details, or social security number.  \n"
+"The {appname} app collects voluntary information about the age group and "
+"gender of the participants. The {appname} app does **not** collect sensitive "
+"or personally identifiable information such as a user's name, address, "
+"telephone number, IP-address, passwords, payment details, or social security "
+"number. Therefore, the information cannot be used to identify a natural "
+"person and is thus not considered personal data (Recital 26 GDPR).  \n"
 "However, if a user decides to contact us via e-mail, which is completely "
 "optional, we and the third-parties providing the e-mail services will "
 "process the e-mail address and its content to provide the service. After "
@@ -220,11 +223,13 @@ msgid ""
 "The results and collected research data from any study in the {appname} app "
 "will be published as a scientific publication. This is done in anonymized "
 "form, i.e. without the research data on its own being able to identify a "
-"specific person. The fully anonymized data from these studies are made "
-"available on the Internet as open data under the [CC-BY-SA license](https://"
-"creativecommons.org/licenses/by-sa/3.0/). This means that the research data "
-"can also be used for any purposes other than the studies they were "
-"originally collected for, including commercial purposes.\n"
+"specific person. The voluntary information about age group and gender of "
+"participants are used to assess the representativeness of the research data. "
+"The fully anonymized data from these studies are made available on the "
+"Internet as open data under the [CC-BY-SA license](https://creativecommons."
+"org/licenses/by-sa/3.0/). This means that the research data can also be used "
+"for any purposes other than the studies they were originally collected for, "
+"including commercial purposes.\n"
 "\n"
 "The collected research data will be processed to perform statistical "
 "analysis for scientific inquiries in a semi-automatic fashion. A link to the "
@@ -701,6 +706,8 @@ msgstr ""
 #: src/widgets/screenconsents.py:90
 #, python-brace-format
 msgid ""
+"If you have any questions regarding this study, please direct them to the "
+"contacts listed below.\n"
 "[b]Contact regarding this study:[/b]\n"
 "Philipps-Universität Marburg\n"
 "Department of Psychology\n"
@@ -717,7 +724,7 @@ msgid ""
 "[ref=mailto:{1}][color=0000ff]{1}[/color][/ref]"
 msgstr ""
 
-#: src/widgets/screenconsents.py:104
+#: src/widgets/screenconsents.py:105
 msgid ""
 "I hereby confirm that I have read and understood the participation "
 "information described above as well as the [ref=privacy]"
@@ -834,10 +841,10 @@ msgid ""
 "[color=3f84f2]colored archs[/color] reach the small [color=3f84f2]marker[/"
 "color] of the same color that is sitting on the [color=008000]green ring[/"
 "color] and not further. Note that the sliders still influences the size of "
-"the [b]white disk[/b] as well. Accomplish both tasks at the same time!"
+"the [b]white disk[/b] as well. Accomplish all tasks at the same time!"
 msgstr ""
 
-#: src/widgets/screeninstructions.py:140
+#: src/widgets/screeninstructions.py:142
 msgid "Start Practice"
 msgstr ""
 
