--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
 "POT-Creation-Date: 2020-07-14 21:30+0200\n"
-"PO-Revision-Date: 2020-07-14 21:32+0200\n"
+"PO-Revision-Date: 2020-07-14 21:55+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: de_DE\n"
@@ -911,8 +911,8 @@ msgid ""
 "marburg.de[/color][/ref]\n"
 "[ref=mailto:{1}][color=0000ff]{1}[/color][/ref]"
 msgstr ""
-"Sollten Sie Fragen bezüglich dieser Studie haben, richten Sie diese bitte "
-"and die unten aufgeführten Kontakte.\n"
+"Sollten Sie Fragen bezüglich dieser Studie haben, richten Sie diese bitte an "
+"die unten aufgeführten Kontakte.\n"
 "[b]Kontakt für diese Studie:[/b]\n"
 "Philipps-Universität Marburg\n"
 "Fachbereich Psychologie\n"
