--- a/locales/en/LC_MESSAGES/translations.po
+++ b/locales/en/LC_MESSAGES/translations.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
-"POT-Creation-Date: 2020-07-14 21:30+0200\n"
-"PO-Revision-Date: 2020-07-14 21:30+0200\n"
+"POT-Creation-Date: 2020-07-29 18:49+0200\n"
+"PO-Revision-Date: 2020-07-29 18:49+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: en\n"
@@ -144,7 +144,8 @@ msgid ""
 "its users, like yourself, provide to us **voluntarily** by participating in "
 "the studies the {appname} app offers. Participation in these studies is "
 "completely voluntary and users have a choice to share the collected research "
-"data with us after each completed study.\n"
+"data with us after each completed study. This privacy policy explains our "
+"handling, use and disclosure of certain information.\n"
 "\n"
 "## Types of Collected Data\n"
 "- Research Data\n"
@@ -156,7 +157,7 @@ msgid ""
 "For each study, that a user participates in, the {appname} app collects "
 "research data that is relevant to the study's research question. These data "
 "may include, but is not limited to, for example, the time of day the study "
-"was conducted, and psychometric measures such as reaction times and scores.\n"
+"was conducted, and measures such as reaction times and scores.\n"
 "\n"
 "For each user account created in the app, a randomly generated character "
 "string is created as part of the research data so that the data can be "
@@ -180,9 +181,9 @@ msgid ""
 "The {appname} app collects voluntary information about the age group and "
 "gender of the participants. The {appname} app does **not** collect sensitive "
 "or personally identifiable information such as a user's name, address, "
-"telephone number, IP-address, passwords, payment details, or social security "
-"number. Therefore, the information cannot be used to identify a natural "
-"person and is thus not considered personal data (Recital 26 GDPR).  \n"
+"telephone number, passwords, payment details, or social security number. "
+"Therefore, the information cannot be used to identify a natural person and "
+"is thus not considered personal data (Recital 26 GDPR).  \n"
 "However, if a user decides to contact us via e-mail, which is completely "
 "optional, we and the third-parties providing the e-mail services will "
 "process the e-mail address and its content to provide the service. After "
@@ -240,6 +241,8 @@ msgid ""
 "a national or international data archive. These studies will thus follow the "
 "recommendations of the German Research Foundation (DFG) and the German "
 "Society for Psychology (DGPs) for quality assurance in research.\n"
+"\n"
+"**Last Updated:** July 29th 2020\n"
 msgstr ""
 
 #: src/app.py:103
@@ -602,15 +605,15 @@ msgstr ""
 msgid "How difficult did you find the task?"
 msgstr ""
 
-#: src/widgets/popups.py:703
+#: src/widgets/popups.py:704
 msgid "DECLINE"
 msgstr ""
 
-#: src/widgets/popups.py:708
+#: src/widgets/popups.py:709
 msgid "ACCEPT"
 msgstr ""
 
-#: src/widgets/popups.py:739
+#: src/widgets/popups.py:740
 msgid "CLOSE"
 msgstr ""
 
@@ -920,32 +923,34 @@ msgstr ""
 #: terms.py:14
 #, python-brace-format
 msgid ""
+"# Terms of Use\n"
+"## Definitions\n"
+"\"You\", \"Your\" and \"User\" refer to you, the person using the Service of "
+"{author}, including the software of the Service downloaded on Your personal "
+"device.  \n"
+"\"We\", \"Us\" and \"Our\" refer to the official web-site of the Service and "
+"the software of the Service, as well as the authors.  \n"
+"\"Service\" means the software {appname}.\n"
 "\n"
-"# Terms & Conditions\n"
-"By downloading or using the app, these terms will automatically apply to you "
-"- you should make sure therefore that you read them carefully before using "
-"the app.  \n"
-"By using or accessing the {appname} you agree (i) that you are 13 years of "
-"age and the minimum age of digital consent in your country, (ii) if you are "
-"the age of majority in your jurisdiction or over, that you have read, "
-"understood, and accept to be bound by the Terms, and (iii) if you are "
-"between 13 (or the minimum age of digital consent, as applicable) and the "
-"age of majority in your jurisdiction, that your legal guardian has reviewed "
-"and agrees to these Terms.\n"
+"## Acceptance of Terms of Use\n"
+"By downloading or using the app, these Terms as well as our privacy policy "
+"and all applicable laws will automatically apply to you - you should make "
+"sure therefore that you read them carefully before using the app.  \n"
+"You must be 13 years of age or older and the minimum age of digital consent "
+"in your country to use this Service. If you are the age of majority in your "
+"jurisdiction or over, you consent that you have read, understood, and accept "
+"to be bound by the Terms, and if you are between 13 (or the minimum age of "
+"digital consent, as applicable) and the age of majority in your "
+"jurisdiction, you confirm that your legal guardian has reviewed and agrees "
+"to these Terms. If you do not agree to these terms and all applicable "
+"additional terms, then you have no right to access or use any of the "
+"Service.\n"
 "\n"
+"## Disclaimers and Warranties\n"
 "You are granted a nonexclusive, worldwide, and perpetual license to perform, "
 "display, and use the Product on the Device.  \n"
-"{author} built the {appname} app as an Open Source app. This SERVICE is "
-"provided by {author} at no cost and is intended for use as is.\n"
-"You're not allowed to attempt to extract the source code of the app from its "
-"binary distribution and installation. The source code is provided separately "
-"under the open MIT license. The app itself, and all the trade marks, "
-"copyright, database rights and other intellectual property rights related to "
-"it, still belong to {author}.\n"
-"\n"
-"{author} is committed to ensuring that the app is as useful and efficient as "
-"possible. For that reason, we reserve the right to make changes to the app.\n"
-"\n"
+"{author} built the {appname} app as an Open Source app. This Service is "
+"provided by {author} at no cost and is intended for use as is.  \n"
 "The {appname} app stores and processes de-identified data that you have "
 "provided to us, in order to provide the Service. As it is with internet "
 "based services, a 100% anonymity cannot be guaranteed. It's your "
@@ -988,36 +993,59 @@ msgid ""
 "indirect, you experience as a result of relying wholly on this functionality "
 "of the app.\n"
 "\n"
-"At some point, we may wish to update the app. The app is currently available "
-"on Android - the requirements for system (and for any additional systems we "
-"decide to extend the availability of the app to) may change, and you'll need "
-"to download the updates if you want to keep using the app. {author} does not "
-"promise that the app will always be updated so that it is relevant to you "
-"and/or works with the Android version that you have installed on your "
-"device. However, you promise to always accept updates to the application "
-"when offered to you, We may also wish to stop providing the app, and may "
-"terminate use of it at any time without giving notice of termination to you. "
-"Unless we tell you otherwise, upon any termination, (a) the rights and "
-"licenses granted to you in these terms will end; (b) you must stop using the "
-"app, and (if needed) delete it from your device.\n"
-"\n"
 "## Links to Other Sites\n"
 "This Service may contain links to other sites. If you click on a third-party "
 "link, you will be directed to that site. Note that these external sites may "
-"not be operated by me. Therefore, I strongly advise you to review the "
-"Privacy Policy of these websites. I have no control over and assume no "
-"responsibility for the content, privacy policies, or practices of any third-"
-"party sites or services.\n"
+"not be operated by {author}. Therefore, {author} strongly advises you to "
+"review the Privacy Policy of these websites. {author} has no control over "
+"and assume no responsibility for the content, privacy policies, or practices "
+"of any third-party sites or services.\n"
 "\n"
-"## Changes to This Terms and Conditions\n"
-"We may update the Terms and Conditions from time to time. \n"
+"## Intellectual Property Rights\n"
+"The source code to this Service is provided separately under the open MIT "
+"license at: \n"
+"[{source}]({source}).\n"
+"The app itself, and all the trade marks, copyright, database rights and "
+"other intellectual property rights related to it, still belong to {author}.\n"
+"\n"
+"## Updates And Availability\n"
+"{author} is committed to ensuring that the app is as useful and efficient as "
+"possible. For that reason, we reserve the right to make changes to the app. "
+"The app is currently available on Android - the requirements for system (and "
+"for any additional systems we decide to extend the availability of the app "
+"to) may change, and you'll need to download the updates if you want to keep "
+"using the app. If you do not accept updates to the application, your right "
+"to use and access the Services will immediately cease. {author} does not "
+"promise that the app will always be updated so that it is relevant to you "
+"and/or works with the Android version that you have installed on your "
+"device.\n"
+"\n"
+"## Termination\n"
+"{author} may wish to stop providing the app and may terminate or suspend any "
+"and all Services immediately, without prior notice or liability, for any "
+"reason whatsoever. Unless we tell you otherwise, upon any termination, (a) "
+"the rights and licenses granted to you in these Terms will end; (b) you must "
+"stop using the app, and (if needed) delete it from your device.You may "
+"terminate this Agreement yourself by ceasing to use the Services and "
+"removing the application from your devices. All provisions of the Terms "
+"which by their nature should survive termination shall survive termination, "
+"including, without limitation, ownership and rights provisions and "
+"warranties, warranty disclaimers, indemnity and limitations of liability.\n"
+"\n"
+"## Changes to This Terms of Use\n"
+"We may revise the Terms of Use from time to time. These changes will not be "
+"retroactive. The user should look at the Agreement regularly. {author} will "
+"also update the “Last updated” date at the bottom of this Agreement. By "
+"continuing to use the Service or retaining access to the Service after the "
+"revisions are in effect, the user agrees to be bound by the revised "
+"Agreement. If the modified Agreement is not acceptable to the user, user’s "
+"only recourse is to cease using the Service.\n"
 "\n"
 "## Contact Us\n"
-"If you have any questions or suggestions about these Terms and Conditions, "
-"do not hesitate to contact us at [{contact}](mailto:{contact}).\n"
+"If you have any questions or suggestions about these Terms of Use, do not "
+"hesitate to contact us at [{contact}](mailto:{contact}).\n"
 "\n"
-"This Terms and Conditions page was partly generated by [App Privacy Policy "
-"Generator](https://app-privacy-policy-generator.firebaseapp.com/)."
+"**Last Updated:** July 29th 2020"
 msgstr ""
 
 #~ msgid "You have {} task{} in this block."
