--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
-"POT-Creation-Date: 2020-07-29 18:49+0200\n"
-"PO-Revision-Date: 2020-07-29 21:37+0200\n"
+"POT-Creation-Date: 2020-07-30 00:50+0200\n"
+"PO-Revision-Date: 2020-07-30 00:55+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: de_DE\n"
@@ -109,7 +109,7 @@ msgid "When you are ready to begin press [b]{}[/b]."
 msgstr "Wenn Sie bereit sind zu beginnen, drücken Sie [b]{}[/b]."
 
 #: src/widgets/screeninstructions.kv:61 src/widgets/screeninstructions.kv:77
-#: src/widgets/screeninstructions.py:144
+#: src/widgets/screeninstructions.py:153
 msgid "Start"
 msgstr "Anfangen"
 
@@ -971,17 +971,15 @@ msgid "This is the same task as in the second practice block."
 msgstr "Es folgt die gleiche Aufgabe wie im zweiten Übungsblock."
 
 #: src/widgets/screeninstructions.py:54
-msgid "In this block you will practice to perform this task."
-msgstr "In diesem Block werden Sie die Ausführung der Aufgabe üben."
+msgid ""
+"In this block you will practice to perform this task. The instructions may "
+"sound complicated, but it's easier understood once you practiced a bit."
+msgstr ""
 
-#: src/widgets/screeninstructions.py:55
+#: src/widgets/screeninstructions.py:56
 msgid "Below is an exemplary image of a successfully executed task."
 msgstr ""
 "Unten sehen Sie ein beispielhaftes Bild der erfolgreich ausgeführten Aufgabe."
-
-#: src/widgets/screeninstructions.py:65
-msgid "There are a total of {} trials in this block."
-msgstr "In diesem Block absolvieren Sie insgesamt {} Durchgänge."
 
 #: src/widgets/screeninstructions.py:68
 msgid "s"
@@ -997,10 +995,95 @@ msgstr ""
 "wie möglich, während Sie die Aufgabe{1} ausführen."
 
 #: src/widgets/screeninstructions.py:71
+msgid ""
+"When the task starts, please hold your device sideways with both hands, so "
+"your thumbs can reach their respective side of the screen comfortably.\n"
+"In the middle of the screen you'll see a [b]white disk[/b] enclosed by a "
+"larger [color=008000]green ring[/color]. On each side of the screen is a "
+"[b]slider[/b] with its handle near the lower end. Moving either of the "
+"slider handles upwards increases the radius of the [b]white disk[/b]. Your "
+"task in each trial is to enlarge the [b]white disk[/b] to the size of the "
+"[color=008000]green ring[/color] by using the [b]2 slider handles "
+"simultaneously[/b] with your thumbs. Use both sliders at the same time to "
+"make the [b]white disk[/b] touch the [color=008000]green ring[/color] "
+"accurately. Please perform the task in a continuous motion and let go of the "
+"sliders when you think you reached the goal. The sliders are deactivated "
+"once you let go of them, so take care not to lose touch to them by accident "
+"beforehand."
+msgstr ""
+"Wenn die Aufgabe beginnt, halten Sie Ihr Gerät bitte seitwärts mit beiden "
+"Händen, sodass Ihre Daumen bequem auf die jeweilige Seite des Bildschirms "
+"gelangen können.\n"
+"In der Mitte des Bildschirms sehen Sie eine [b]weiße Scheibe[/b], die von "
+"einem größeren [color=008000]grünen Ring[/color] umschlossen ist. Auf jeder "
+"Bildschirmseite befindet sich jeweils ein [b]Schieberegler[/b] in niedriger "
+"Position. Das Bewegen der beiden Schieberegler aufwärts vergrößert den "
+"Radius der [b]weißen Scheibe[/b] jeweils unabhängig voneinander. Ihre "
+"Aufgabe in jedem Durchgang ist es, die [b]weiße Scheibe[/b] auf die Größe "
+"des [color=008000]grünen Rings[/color] zu vergrößern, indem Sie die [b]2 "
+"Schieberegler gleichzeitig[/b] mit Ihren Daumen verwenden. Verwenden Sie "
+"beide Schieberegler gleichzeitig, damit die [b]weiße Scheibe[/b] den "
+"[color=008000]grünen Ring[/color] genau berührt. Bitte führen Sie die "
+"Aufgabe in einer durchgängigen Bewegung aus and lassen Sie die Schieberegler "
+"los, wenn sie denken die Aufgabe erfüllt zu haben. Die Schieberegler werden "
+"deaktiviert, sobald Sie diese loslassen, also geben Sie Acht, dass sie nicht "
+"vorher versehentlich den Kontakt zu ihnen verlieren."
+
+#: src/widgets/screeninstructions.py:85
+msgid ""
+"In addition you'll have to fulfill another task concurrently to the first "
+"task. On the top of the [color=008000]green ring[/color] there's a short "
+"[color=3f84f2]colored arch[/color] as well as a marker of the same color "
+"some distance apart. One of the sliders is also marked by the same color. "
+"Moving this [color=3f84f2]colored slider[/color] upwards now also increases "
+"the length of the [color=3f84f2]colored arch[/color] in addition to "
+"increasing the radius of the [b]white disk[/b]. You have to make the "
+"[color=3f84f2]colored arch[/color] reach the small [color=3f84f2]colored "
+"marker[/color] on the [color=008000]green ring[/color] and not further. "
+"Accomplish both tasks at the same time!"
+msgstr ""
+"Außerdem müssen Sie zeitgleich zur ersten Aufgabe eine weitere Aufgabe "
+"erfüllen. Auf dem [color=008000]grünen Ring[/color] befindet sich ein kurzer "
+"[color=3f84f2]farbiger Bogen[/color], sowie ein kleiner gleichfarbiger Punkt "
+"in einigem Abstand dazu. Einer der Schieberegler ist durch die gleiche Farbe "
+"markiert. Das Aufwärtsbewegen dieses [color=3f84f2]farbigen Schiebereglers[/"
+"color] verlängert nun auch den [color=3f84f2]farbigen Bogen[/color] "
+"zusätzlich zur Vergrößerung der [b]weißen Scheibe[/b].\n"
+"Sie müssen dafür sorgen, dass der [color=3f84f2]farbige Bogen[/color] den "
+"kleinen [color=3f84f2]farbigen Punkt[/color] berührt, und nicht darüber "
+"hinaus. Erfüllen Sie beide Aufgaben gleichzeitig!"
+
+#: src/widgets/screeninstructions.py:95
+msgid ""
+"In addition you'll have to fulfill another task concurrently to the first "
+"task. On the top of the [color=008000]green ring[/color] there are 2 short "
+"[color=3f84f2]colored archs[/color] going in opposite directions, as well as "
+"a marker with both colors at the bottom of the [color=008000]green ring[/"
+"color]. Each slider is also marked by one of the colors. Moving a "
+"[color=3f84f2]colored slider[/color] upwards now also increases the length "
+"of the respective [color=3f84f2]same colored arch[/color] in addition to "
+"increasing the radius of the [b]white disk[/b]. You have to make both "
+"[color=3f84f2]colored archs[/color] reach the small [color=3f84f2]colored "
+"marker[/color] and not further. Accomplish all tasks at the same time!"
+msgstr ""
+"Außerdem müssen Sie zeitgleich zur ersten Aufgabe eine weitere Aufgabe "
+"erfüllen. Auf dem [color=008000]grünen Ring[/color] befinden sich 2 kurze "
+"[color=3f84f2]farbige Bögen[/color] in gegensätzlicher Richtung, sowie ein "
+"kleiner zweifarbiger Punkt in einigem Abstand dazu auf der unteren Seite des "
+"[color=008000]grünen Rings[/color]. Beide Schieberegler sind jeweils durch "
+"eine der Farben markiert. Das Aufwärtsbewegen der [color=3f84f2]farbigen "
+"Schieberegler[/color] verlängert nun auch den jeweils "
+"[color=3f84f2]gleichfarbigen Bogen[/color] zusätzlich zur Vergrößerung der "
+"[b]weißen Scheibe[/b]. Sie müssen dafür sorgen, dass beide "
+"[color=3f84f2]farbigen Bögen[/color] den kleinen [color=3f84f2]farbigen "
+"Punkt[/color] berühren, und nicht darüber hinaus. Erfüllen Sie alle Aufgaben "
+"gleichzeitig!"
+
+#: src/widgets/screeninstructions.py:108
 msgid "This will also be signaled to you by a short vibration. "
 msgstr "Dies wird Ihnen auch über eine kurze Vibration signalisiert. "
 
-#: src/widgets/screeninstructions.py:73
+#: src/widgets/screeninstructions.py:110
 #, python-brace-format
 msgid ""
 "A trial starts by giving you {0} seconds to prepare for the trial. During "
@@ -1029,7 +1112,7 @@ msgstr ""
 "Kurz danach ({2} Sekunden) werden Sie aufgefordert, sich auf den nächsten "
 "Durchgang vorzubereiten. "
 
-#: src/widgets/screeninstructions.py:85
+#: src/widgets/screeninstructions.py:122
 msgid ""
 "The events for the start and end of the countdown for each trial will play "
 "distinctive sounds. "
@@ -1037,81 +1120,11 @@ msgstr ""
 "Die Ereignisse für den Beginn und das Ende des Countdowns für jeden "
 "Durchgang geben jeweils einen speziellen Ton wieder. "
 
-#: src/widgets/screeninstructions.py:87
-msgid ""
-"When the task starts, please hold your device sideways with both hands, so "
-"your thumbs can reach their respective side of the screen comfortably.\n"
-"In the middle of the screen you'll see a [b]white disk[/b] enclosed by a "
-"larger [color=008000]green ring[/color]. Your task in each trial is to match "
-"the size of this [b]white disk[/b] to the size of the [color=008000]green "
-"ring[/color], so the [b]white disk[/b] accurately touches the "
-"[color=008000]green ring[/color]. You control the size of the disc by using "
-"the [b]2 sliders[/b] located to the left and right side of the display with "
-"your thumbs. Both sliders have an influence on the size of the disc and "
-"you'll need both at the same time to get the [b]white disk[/b] to touch the "
-"[color=008000]green ring[/color]. Please perform the task in a continuous "
-"motion and let go of the sliders when you think you reached the goal. The "
-"sliders are deactivated once you let go of them."
-msgstr ""
-"Wenn die Aufgabe beginnt, halten Sie Ihr Gerät bitte seitwärts mit beiden "
-"Händen, sodass Ihre Daumen bequem auf die jeweilige Seite des Bildschirms "
-"gelangen können.\n"
-"In der Mitte des Bildschirms sehen Sie eine [b]weiße Scheibe[/b], die von "
-"einem größeren [color=008000]grünen Ring[/color] umschlossen ist. Ihre "
-"Aufgabe in jedem Durchgang ist es, die Größe dieser [b]weißen Scheibe[/b] "
-"auf die Größe des [color=008000]grünen Rings[/color] anzupassen, damit die "
-"[b]weiße Scheibe[/b] den [color=008000]grünen Ring[/color] berührt. Sie "
-"steuern die Größe der Scheibe mithilfe der [b]2-Schieberegler[/b] links und "
-"rechts auf dem Display mittels ihrer Daumen. Beide Schieberegler haben "
-"Einfluss auf die Größe der Scheibe, und Sie benötigen beide gleichzeitig, "
-"damit die [b]weiße Scheibe[/b] den [color=008000]grünen Ring[/color] "
-"berührt. Bitte führen Sie die Aufgabe in einer durchgängigen Bewegung aus "
-"and lassen Sie die Schieberegler los, wenn sie denken die Aufgabe erfüllt zu "
-"haben. Die Schieberegler werden deaktiviert, sobald Sie diese loslassen."
+#: src/widgets/screeninstructions.py:124
+msgid "There are a total of {} trials in this block."
+msgstr "In diesem Block absolvieren Sie insgesamt {} Durchgänge."
 
-#: src/widgets/screeninstructions.py:100
-msgid ""
-"In addition you'll have to fulfill another task concurrently to the first "
-"task. Around the [color=008000]green ring[/color] there's a "
-"[color=3f84f2]colored arch[/color] which length is controlled only by the "
-"slider with the same colored handle and bar. You have to make the "
-"[color=3f84f2]colored arch[/color] reach the small [color=3f84f2]colored "
-"marker[/color] that is sitting on the [color=008000]green ring[/color] and "
-"not further. Note that the colored slider still influences the size of the "
-"[b]white disk[/b] as well. Accomplish both tasks at the same time!"
-msgstr ""
-"Außerdem müssen Sie zeitgleich zur ersten Aufgabe eine weitere Aufgabe "
-"erfüllen. Um den [color=008000]grünen Ring[/color] befindet sich ein "
-"[color=3f84f2]farbiger Bogen[/color], dessen Länge nur durch den farbig "
-"markierten Schieberegler gesteuert wird. Sie müssen dafür sorgen, dass der "
-"[color=3f84f2]farbige Bogen[/color] den kleinen [color=3f84f2]farbigen "
-"Punkt[/color] berührt, der auf dem [color=008000]grünen Ring[/color] sitzt "
-"und nicht darüber hinaus. Beachten Sie, dass der farbige Schieberegler auch "
-"weiterhin die Größe der [b]weißen Scheibe[/b] beeinflusst. Erfüllen Sie "
-"beide Aufgaben gleichzeitig!"
-
-#: src/widgets/screeninstructions.py:108
-msgid ""
-"In addition you'll have to fulfill another task concurrently to the first "
-"task. Around the [color=008000]green ring[/color] there're "
-"[color=3f84f2]colored archs[/color] which lengths are controlled only by the "
-"sliders with the same colored handle and bar. You have to make each of the "
-"[color=3f84f2]colored archs[/color] reach the small [color=3f84f2]marker[/"
-"color] of the same color that is sitting on the [color=008000]green ring[/"
-"color] and not further. Note that the sliders still influences the size of "
-"the [b]white disk[/b] as well. Accomplish all tasks at the same time!"
-msgstr ""
-"Außerdem müssen Sie zeitgleich zur ersten Aufgabe eine weitere Aufgabe "
-"erfüllen. Um den [color=008000]grünen Ring[/color] befinden sich "
-"[color=3f84f2]farbige Bögen[/color], deren Längen nur durch die jeweils "
-"gleichfarbig markierten Schieberegler gesteuert werden. Sie müssen dafür "
-"sorgen, dass jeder der [color=3f84f2]farbigen Bögen[/color] die jeweilige "
-"kleine [color=3f84f2]gleichfarbige Markierung[/color] berührt, die auf dem "
-"[color=008000]grünen Ring[/color] liegt und nicht darüber hinaus. Beachten "
-"Sie, dass die Schieberegler auch weiterhin die Größe der [b]weißen Scheibe[/"
-"b] beeinflussen. Erfüllen Sie alle Aufgaben gleichzeitig!"
-
-#: src/widgets/screeninstructions.py:142
+#: src/widgets/screeninstructions.py:151
 msgid "Start Practice"
 msgstr "Übung anfangen"
 
@@ -1472,6 +1485,31 @@ msgstr ""
 "kontaktieren.\n"
 "\n"
 "**Zuletzt Aktualisiert:** 29. Juli 2020"
+
+#~ msgid "In this block you will practice to perform this task."
+#~ msgstr "In diesem Block werden Sie die Ausführung der Aufgabe üben."
+
+#~ msgid ""
+#~ "In addition you'll have to fulfill another task concurrently to the first "
+#~ "task. Around the [color=008000]green ring[/color] there're "
+#~ "[color=3f84f2]colored archs[/color] which lengths are controlled only by "
+#~ "the sliders with the same colored handle and bar. You have to make each "
+#~ "of the [color=3f84f2]colored archs[/color] reach the small "
+#~ "[color=3f84f2]marker[/color] of the same color that is sitting on the "
+#~ "[color=008000]green ring[/color] and not further. Note that the sliders "
+#~ "still influences the size of the [b]white disk[/b] as well. Accomplish "
+#~ "all tasks at the same time!"
+#~ msgstr ""
+#~ "Außerdem müssen Sie zeitgleich zur ersten Aufgabe eine weitere Aufgabe "
+#~ "erfüllen. Um den [color=008000]grünen Ring[/color] befinden sich "
+#~ "[color=3f84f2]farbige Bögen[/color], deren Längen nur durch die jeweils "
+#~ "gleichfarbig markierten Schieberegler gesteuert werden. Sie müssen dafür "
+#~ "sorgen, dass jeder der [color=3f84f2]farbigen Bögen[/color] die jeweilige "
+#~ "kleine [color=3f84f2]gleichfarbige Markierung[/color] berührt, die auf "
+#~ "dem [color=008000]grünen Ring[/color] liegt und nicht darüber hinaus. "
+#~ "Beachten Sie, dass die Schieberegler auch weiterhin die Größe der "
+#~ "[b]weißen Scheibe[/b] beeinflussen. Erfüllen Sie alle Aufgaben "
+#~ "gleichzeitig!"
 
 #~ msgid ""
 #~ "Please read the following information carefully before proceeding. Use "
