fix missing translation string

--- a/locales/de/LC_MESSAGES/translations.po
+++ b/locales/de/LC_MESSAGES/translations.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: NeuroPsyResearch\n"
 "POT-Creation-Date: 2020-07-30 00:50+0200\n"
-"PO-Revision-Date: 2020-07-30 00:55+0200\n"
+"PO-Revision-Date: 2020-07-31 02:30+0200\n"
 "Last-Translator: Olaf Haag <contact@olafhaag.com>\n"
 "Language-Team: contact@olafhaag.com\n"
 "Language: de_DE\n"
@@ -975,6 +975,9 @@ msgid ""
 "In this block you will practice to perform this task. The instructions may "
 "sound complicated, but it's easier understood once you practiced a bit."
 msgstr ""
+"In diesem Block werden Sie die Ausführung der Aufgabe üben. Die Anweisungen "
+"mögen kompliziert klingen, doch es ist einfacher zu verstehen, wenn Sie ein "
+"wenig geübt haben."
 
 #: src/widgets/screeninstructions.py:56
 msgid "Below is an exemplary image of a successfully executed task."
